--- a/style.css
+++ b/style.css
@@ -2,3 +2,6 @@ body{background-color: #f0f8ff;}
 p{color: #333;}
 h1{color: teal;}
 body{padding: 20px;}
+body{background: linear-gradient(white, #f0f8ff);}
+.box{box-shadow: 0 4px 10px rgba(0, 0, 0, 1);}
+h1{text-align: center; font-size: 32px;}
