--- a/bmi-app/style.css
+++ b/bmi-app/style.css
@@ -1,8 +1,8 @@
 /*判定の色*/
-*judge-under{ color: blue;}
-*judge-normal{ color: green;}
-*judge-over{ color: orange;}
-*judge-obese{ color: red;}
+.judge-under{ color: blue;}
+.judge-normal{ color: green;}
+.judge-over{ color: orange;}
+.judge-obese{ color: red;}
 
 /*見やすくする（任意）*/
 #BMIjudge { font-weight: bold;}
